--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "mysql": "^2.18.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "validator": "^13.11.0"
   }
 }
